# rss-stream-to-notion

./: Cargo.toml  wrangler.toml
src/: latest_pushed_date_memory.rs  lib.rs  notion.rs  rss.rs  store.rs  subscribe.rs
src/snapshots/: worker__rss__tests__initialize_with_feed_root_element_xml.snap.new  worker__rss__tests__initialize_with_feed_root_element_xml_with_entry_tag.snap.new  worker__rss__tests__initialize_with_rss_root_element_xml.snap.new
